✨ Open options page after installation

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-    <h1>Mastodon View Profile</h1>
-    <p>In order to work properly, this extension needs to know which instance hosts your account.</p>
+    <h1><img src="./../images/icon-128.png" alt="" height="64" width="64"> Mastodon View Profile</h1>
+    <p>In order to work properly, this extension needs to know which instance hosts your account. Please enter the required information below and hit Save Settings when done.</p>
 
     <form id="settings" action="" method="POST">
-        <h2>Instance Configuration</h2>
+        <h2>Mastodon Instance Configuration</h2>
         <fieldset>
             <dl>
                 <dt>
@@ -31,7 +31,7 @@
                     <input type="text" name="web_domain" id="web_domain" value="">
                     <div class="info">
                         <p>ℹ️ <code>WEB_DOMAIN</code> of the Mastodon instance where you have your account. Typically this is the same as the <code>LOCAL_DOMAIN</code> value, yet some instances run Mastodon on a subdomain (e.g. <code>fediverse.zachleat.com</code>).</p>
-                        <p><b>You can leave this value empty if it is the same as the <code>LOCAL_DOMAIN</code> or if you don’t know what this means.</b></p>
+                        <p><b>You can leave this value empty if it is the same as the <code>LOCAL_DOMAIN</code> which most likely is the case.</b></p>
                     </div>
                 </dd>
             </dl>
