--- a/src/options/options.html
+++ b/src/options/options.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <h1><img src="./../images/icon-128.png" alt="" height="64" width="64"> Mastodon View Profile</h1>
     <p>In order to work properly, this extension needs to know which instance hosts your account. Please enter the required information below and hit Save Settings when done.</p>
+    <h1><img src="./../images/icon-128.png" alt="" height="64" width="64"> Mastodon Redirector</h1>
 
     <form id="settings" action="" method="POST">
         <h2>Mastodon Instance Configuration</h2>
